# splitwise

./: Makefile  pyproject.toml
splitwise_cli/: cli.py  client.py  constants.py  main.py  models.py  parsers.py  users.py
