[tool.poetry]
name = "splitwise-cli"
version = "0.1.0"
description = ""
authors = ["Johnathan Estacio <johnathan.estacio@virtahealth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
splitwise = "^3.0.0"

[tool.poetry.scripts]
splitwise = "splitwise_cli.cli:cli"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
